# riemannian-nlp

./: .gitignore  .spell-conda.yml  Makefile  README.md  build.py  pyproject.toml  run.py  setup.py  test_data_iterator.py
riemann/: __init__.py  cli_experiment.py  device_manager.py  embed_eval.py  embed_experiment.py  embed_save.py  euclidean_manifold.py  eval_ingredient.py  graph_embedder.py  graph_embedding_train_schedule.py  graph_embedding_utils.py  graph_manifold_margin_loss.py  jacobian.py  logging_thread.py  lr_schedule.py  manifold_embedding.py  manifold_initialization.py  manifold_mapping_model.py  manifold_nns.py  manifold_tensors.py  model.py  model_component.py  optimizer_gen.py  product_manifold.py  rsgd_multithread.py  run_script.py  save_ingredient.py  setup.py  tensorboard_thread.py  train.py  train_old.py  utils.py  visualize.py
riemann/config/: config.py  config_loader.py  graph_sampling_config.py  manifold_config.py  manifold_initialization_config.py  test_config.py  type_inspection.py
riemann/data/: batching.py  data_ingredient.py  data_loader.py  gen_en_conceptnet.py  generate_graphs.py  graph.py  graph_data_batch.py  graph_data_batch_iterator.pyx  graph_dataset.py  graph_dataset.pyx  graph_loader_utils.py  pickle_manager.py  wordnet.py
riemann/embedding/: CoreNLP_pb2.py  __init__.py  character_map.py  core_nlp.py  lazy.py  sentence_embedder.py  term_frequencies.py  token_mapper.py  word_embedding.py  word_piecer.py
riemann/evaluations/: mean_rank.py
riemann/featurizers/: concept_net_vector_featurizer.py  featurizer.py  random_featurizer.py  (+6 more)
(+32 files in other folders)
